# icub-training

./: CMakeLists.txt  PITCHME.md  PITCHME.yaml  README.md
app/scripts/: tutorial_interface-system.xml
tutorial_cartesian-interface/: CMakeLists.txt
tutorial_cartesian-interface/app/scripts/: tutorial_cartesian-interface-app.xml  tutorial_cartesian-interface-system.xml
tutorial_cartesian-interface/src/: control-cartesian.cpp
tutorial_gaze-interface/: CMakeLists.txt
tutorial_gaze-interface/app/scripts/: tutorial_gaze-interface-app.xml
tutorial_gaze-interface/src/: control-gaze.cpp
tutorial_interface/: CMakeLists.txt  PITCHME.md  README.md
tutorial_interface/app/conf/: scope-cartesian.xml  scope-gaze.xml
tutorial_interface/app/scripts/: tutorial_cartesian-interface-app.xml  tutorial_gaze-interface-app.xml
tutorial_interface/src/: control-cartesian.cpp  control-gaze.cpp  mover.cpp  tutorial_interface-control-cartesian.thrift  tutorial_interface-control-gaze.thrift
tutorial_yarp-basics/: CMakeLists.txt  PITCHME.md  README.md
tutorial_yarp-basics/app/: CMakeLists.txt
tutorial_yarp-basics/app/scripts/: tutorial_yarp-basics.xml
tutorial_yarp-basics/src/: main.cpp  tutorial_yarp-basics.thrift
tutorial_yarp-opencv/: CMakeLists.txt  PITCHME.md  README.md
tutorial_yarp-opencv/app/scripts/: tutorial_yarp-opencv.xml  yarp-opencv.xml
tutorial_yarp-opencv/src/: main.cpp
